<resources>
    <string name="app_name">MockLocation</string>
    <string name="tips">提示</string>
    <string name="location_permission_request">当前功能需要开启定位权限</string>
    <string name="location_permission_tip">你还未开启定位权限，可能无法模拟定位</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="start_mock">开始模拟</string>
    <string name="stop_mock">停止模拟</string>
    <string name="longitude">经度</string>
    <string name="latitude">纬度</string>
    <string name="altitude">海拔</string>
    <string name="location_interval">刷新频率（单位ms）</string>
</resources>